@@ -1,3 +1,9 @@
+1999-07-13  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* s-garfil.adb: Fix bug introduced by recent checkins. As we do
+	not look at partition id table directly, reload channel copy
+	because it may be updated in the meantime.
+
 1999-07-12  Laurent Pautet  <pautet@dorine.enst.fr>
 
         * s-gartyp.ads, s-rpc.ads: Partition_ID can now grow forever.
